<resources>
    <string name="app_name">SmartDome</string>


    <string name="main">主页</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="please_enter_account">请输入账号</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_again_confirm_password">请再次确认密码</string>


    <string name="demo_show_toast">简单显示一个 Toast</string>
    <string name="demo_show_short_toast">显示一个短 Toast</string>
    <string name="demo_show_long_toast">显示一个长 Toast</string>
    <string name="demo_show_cross_page_toast">显示一个跨页面的 Toast</string>
    <string name="demo_show_toast_with_two_second_delay">延迟 2 秒显示 Toast</string>
    <string name="demo_show_toast_in_the_subthread">在子线程中显示吐司</string>
    <string name="demo_switch_to_white_style">切换为白色样式（局部生效）</string>
    <string name="demo_switch_to_black_style">切换为黑色样式（局部生效）</string>
    <string name="demo_switch_to_hint_style">切换为提示样式（局部生效）</string>
    <string name="demo_switch_to_warn_style">切换为警告样式（局部生效）</string>
    <string name="demo_switch_to_success_style">切换为成功样式（局部生效）</string>
    <string name="demo_switch_to_error_style">切换为错误样式（局部生效）</string>
    <string name="demo_custom_toast_layout">自定义 Toast 布局（全局生效）</string>
    <string name="demo_switch_to_toast_queuing_strategy">切换成 Toast 排队显示策略</string>
    <string name="demo_click_show_three_toast">点我连续显示 3 个 Toast</string>
    <string name="demo_show_toast_in_background_state">在后台状态下显示 Toast</string>
    <string name="demo_combining_window_framework_use">搭配 EasyWindow 悬浮窗框架</string>
    <string name="demo_show_toast_result">我是普通的 Toast我是普通的 Toast我是普通的 Toast我是普通的 Toast我是普通的 Toast</string>
    <string name="demo_show_short_toast_result">我是一个短 Toast</string>
    <string name="demo_show_long_toast_result">我是一个长 Toast</string>
    <string name="demo_show_cross_page_toast_result">我是跨页面显示的 Toast</string>
    <string name="demo_show_toast_with_two_second_delay_result">我是延迟 2 秒显示的 Toast</string>
    <string name="demo_show_toast_in_the_subthread_result">我是子线程中弹出的吐司</string>
    <string name="demo_switch_to_white_style_result">我是白色样式的 Toast</string>
    <string name="demo_switch_to_black_style_result">我是黑色样式的 Toast</string>
    <string name="demo_switch_to_info_style_result">我是提示样式的 Toast</string>
    <string name="demo_switch_to_warn_style_result">我是警告样式的 Toast</string>
    <string name="demo_switch_to_success_style_result">我是成功样式的 Toast</string>
    <string name="demo_switch_to_error_style_result">我是错误样式的 Toast</string>
    <string name="demo_custom_toast_layout_result">我是自定义布局的 Toast（全局生效）</string>
    <string name="demo_switch_to_toast_queuing_strategy_result">切换到排队显示策略成功，请点击下方文本来体验效果</string>
    <string name="demo_show_three_toast_copywriting">我是第 %d 个 Toast</string>
    <string name="demo_show_toast_in_background_state_hint">请系好安全带，即将跳转到手机桌面</string>
    <string name="demo_show_toast_in_background_state_snack_bar">温馨提示：安卓 10 在后台显示 Toast 需要有通知栏权限或者悬浮窗权限的情况下才可以显示</string>
    <string name="demo_show_toast_in_background_state_result_1">我是在后台显示的 Toast（有悬浮窗权限真的可以为所欲为）</string>
    <string name="demo_show_toast_in_background_state_result_2">我是在后台显示的 Toast（安卓 11 及以上在后台显示只能使用系统样式）</string>
    <string name="demo_show_toast_in_background_state_result_3">我是在后台显示的 Toast</string>
    <string name="demo_combining_window_framework_use_result">就问你溜不溜</string>

    <string name="no_data">暂时没有数据哦～</string>
    <string name="no_message">暂时没有消息哦～</string>
    <string name="refresh_success">刷新成功</string>
    <string name="refresh_error">刷新失败</string>
    <string name="load_success">加载成功</string>
    <string name="load_error">加载失败</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="classic_designer">com.example.myapplication.base.component.swipe.SwipeLayout$ClassicDesigner</string>
    <string name="overlay_designer">com.example.myapplication.base.component.swipe.SwipeLayout$OverlayDesigner</string>
    <string name="parallax_designer">com.example.myapplication.base.component.swipe.SwipeLayout$ParallaxDesigner</string>
    <string name="long_text">我所认识的中国，http://www.baidu.com 强大、友好 --习大大。@奥特曼 “一带一路”经济带带动了沿线国家的经济发展，促进我国与他国的友好往来和贸易发展，可谓“双赢”，Github地址。 自古以来，中国以和平、友好的面孔示人。汉武帝派张骞出使西域，开辟丝绸之路，增进与西域各国的友好往来。http://www.baidu.com 胡麻、胡豆、香料等食材也随之传入中国，汇集于中华美食。@RNG 漠漠古道，驼铃阵阵，这条路奠定了“一带一路”的基础，让世界认识了中国。</string>
</resources>